2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add strcase.h.
	* strcase.h, strcasecmp.c, strncasecmp.c: New files from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* gethostname.c: Update from gnulib.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move getline, getnline, & getndelim2
	sources to their own sections.
	* getline.c, getndelim2.c, getndelim2.h, getnline.c, getnline.h: Update
	from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Add getopt.h.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Add new configuration for getopt.
	* getopt.h: Remove file.
	* getopt_.h, getopt_int.h: New files from GNULIB.
	* getopt.c, getopt1.c: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* mkstemp.c, tempname.c: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove xstrdup.c.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* xstrdup.c: Remove this obsolete file.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (fnmatch, fnmatch-posix): Improve comment.
	* fnmatch.c, fnmatch_loop.c: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move exit.h to its own section.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Remove "savecwd.c", "savecwd.h", "xgetwd.c" from project.
	Add "save-cwd.c", "save-cwd.h", "xgetcwd.c", "xgetcwd.h" to project.
	* libcvs.dep: Regenerated for "libcvs.dsp" change.
	* libcvs.mak: Regenerated for "libcvs.dsp" change.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* basename.c, dirname.c, dirname.h, stripslash.c: Updated from GNULIB.
	* system.h: s/FILESYSTEM_PREFIX_LEN/FILE_SYSTEM_PREFIX_LEN/.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.gnulib: New file.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add xalloc-die.c.